name:                reactant
version:             0.1.0.0
synopsis:            A simple FRP library.
-- description:         
homepage:            https://github.com/skypers/reactant
license:             GPL-3
license-file:        LICENSE
author:              DimitriSabadie
maintainer:          dimitri.sabadie@gmail.com

category:            Control
build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


library
  -- Modules exported by the library.
  exposed-modules:     FRP.Reactant
  
  -- Modules included in this library but not exported.
  -- other-modules:       
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
  
  -- Other library packages from which modules are imported.
  build-depends:       base         >= 4.5
                     , mtl          == 2.1.*
                     , transformers == 0.3.*
                     , stm          == 2.4.*
  
  -- Directories containing source files.
  -- hs-source-dirs:      
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  
