name:                reactant
version:             0.1.0.0
--synopsis:            
-- description:         
homepage:            https://github.com/skypers/reactant
license:             GPL-3
license-file:        LICENSE
author:              DimitriSabadie
maintainer:          dimitri.sabadie@gmail.com

category:            Control
build-type:          Simple

-- extra-source-files:  

cabal-version:       >=1.10


library
  exposed-modules:     FRP.Reactant
  
  default-extensions:  DeriveFunctor
                     , FlexibleContexts
                     , GeneralizedNewtypeDeriving
                     , TupleSections

  build-depends:       base        >= 4.5 && < 4.9
                     , semigroups  >= 0.16 && < 0.17
                     , profunctors >= 4.4 && < 4.5
  
  -- Directories containing source files.
  -- hs-source-dirs:      
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  
